samples/_failures_safe/1761331582_0f85d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12252f6a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_12252f6a.c:153:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  153 |     int token_count
      |     ^~~
./samples/SAFE/__tmp_12252f6a.c:153:5: error: expected declaration or statement at end of input
